--- a/TestTeacherTrigger.cls
+++ b/TestTeacherTrigger.cls
@@ -2,16 +2,16 @@
 private class TestTeacherTrigger {
     
     @isTest static void TestTeacherInsertionTeachingHindi(){
-        Teacher aTeacher = new Teacher(Subject__c='hindi');
-        Database.insertResult result = Database.insert(aTeacher);
+        Contact aTeacher = new Contact(Subject__c='hindi');
+        Database.InsertResults result = Database.insert(aTeacher);
         System.assert(!result.isSuccess());
     }
     
     @isTest static void TestTeacherUpdationTeachingHindi(){
-        Teacher aTeacher = new Teacher(Subject__c='english');
+        Contact aTeacher = new Contact(Subject__c='english');
         insert aTeacher;
         aTeacher.Subject__c = 'hindi';
-        Database.updateResult result = Database.update(aTeacher);
+        Database.UpdateResults result = Database.update(aTeacher);
         System.assert(!result.isSuccess());
     }
 
